Planets table init

--- a/Web dev/Labwork 1/Letter/index.html
+++ b/Web dev/Labwork 1/Letter/index.html
@@ -96,7 +96,7 @@ discovered that they were just moving like this because they were really cold.
     <br>
     Dr Eleanor Gaye<br>
     <br>
-    University of Awesome motto: <cite>"Be awesome to each other"</cite>. -- The memoirs of <em>Bill S Preston,</em> <abbr title="Esquire">Esq</abbr>
+    University of Awesome motto: <cite>"Be awesome to each other"</cite>. -- The memoirs of <em>Bill S Preston, <abbr title="Esquire">Esq</abbr></em>
 </p>
 </body>
 </html>
