--- a/Web dev/Labwork 2/Paw Shop/index.html
+++ b/Web dev/Labwork 2/Paw Shop/index.html
@@ -20,7 +20,7 @@
     <a href="#" class="logo"> <i class="fas fa-paw"></i> Paw Shop </a>
 
     <nav class="navbar">
-        <a href="#home">Дом</a>
+        <a href="#home">Главная</a>
         <a href="#about">О нас</a>
         <a href="#shop">Наши продукты</a>
         <a href="#services">Наши услуги</a>
@@ -362,28 +362,6 @@
     <div class="credit"> Copyright <span>	&copy; Adele Chinda </span> </div>
 
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- custom js file link  -->
-<script src="js/script.js"></script>
 
 </body>
 </html>
