Web Dev Labwork 6

--- a/Web dev/Labwork 6/circumference.html
+++ b/Web dev/Labwork 6/circumference.html
@@ -8,13 +8,13 @@
 
     <body>
 
-        <h4>Circle calculator</h4>
+        <h2>Калькулятор окружности</h2>
         <form class = "form" name="form1">
 
-            Radius of circle <input class="box" type="number" name="radius"> <br>
-            Diameter of circle <input class="box" type="text" name="diameter" disable> <br>
-            Circumference of circle <input class="box" type="text" name="circumference" disable> <br>
-            Area of circle <input class="box" type="text" name="area" disable> <br>
+            Радиус окружности <input class="box" type="number" name="radius"> <br>
+            Диаметр круга <input class="box" type="text" name="diameter" disable> <br>
+            Окружность круга <input class="box" type="text" name="circumference" disable> <br>
+            Площадь круга <input class="box" type="text" name="area" disable> <br>
 
             <input class="buttons-reset" type="reset" value="Очистить">
             <input class="buttons-calculate" type="button" value="Вычислить" onClick="document.form1.diameter.value = document.form1.radius.value * 2,
