Web Dev Labwork 7

--- a/Web dev/Labwork 7/triangle/triangle.html
+++ b/Web dev/Labwork 7/triangle/triangle.html
@@ -39,7 +39,7 @@ function def(obj) {
             Сторона А <input class="box" type="number" name="side_A" placeholder="0"> <br>
             Сторона B <input class="box" type="number" name="side_B" placeholder="0"> <br>
             Сторона C <input class="box" type="number" name="side_C" placeholder="0"> <br>
-            <input class="result-box" type="text" name="res" placeholder="Введите необходимые значения"> <br>
+            <input class="result-box" type="text" name="res" placeholder="Введите необходимые значения" disabled> <br>
             <input class="buttons-reset" type="reset" value="Очистить">
             <input class="buttons-calculate" type="button" value="Определить" onClick="def(form)">
             <br>
