Web Dev Labwork 8

--- a/Web dev/Labwork 8/TV/netflx.html
+++ b/Web dev/Labwork 8/TV/netflx.html
@@ -1,28 +1,18 @@
 <html>
 
 <head>
-    <title> Perfect Number </title>
-    <script type="text/JavaScript">
-    <script type="text/javascript" src="netflix.js"></script>
+    <title> Netflix Movie Cards </title>
     <link href="netflix.css" rel="stylesheet">
-
-</script>
+    <script type="text/javascript" src="netflix.js"></script>
 </head>
-<center>
+<!-- <center> -->
 
-    <body>
-        <h2>Определитель совершенного<br> числа</h2>
-        <form  name="form" class="form">
-            Значение n <input class="box" type="number" name="variable_n" placeholder="0"> <br>
-            Делители <input class="box" type="text" name="box_divisors" placeholder="0" disabled> <br>
-            Сумма делителей<input class="box" type="number" name="box_sum" placeholder="0" disabled> <br>
-            <input class="result-box" type="text" name="res" placeholder="" disabled> <br>
-            <input class="buttons-reset" type="reset" value="Очистить">
-            <input class="buttons-calculate" type="button" value="Определить" onClick="def(form)">
-            <br>
+<body bgcolor="#4dd0e1" style="
+padding-left: 50;">
+    <h2>Подробности о фильме Netflix</h2>
+    <script>mov();</script>
 
-        </form>
-    </body>
-</center>
+</body>
+<!-- </center> -->
 
 </html>
